# QueueAppointment

./: README.md  app.py  pyproject.toml  requirements.txt
static/css/: style.css
static/js/: api.js  jquery.bootpag.js
templates/: index.html
