[tool.poetry]
name = "queueappointment"
version = "0.1.0"
description = ""
authors = ["steven <steven850507@amastek.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-cors = "^4.0.0"
redis = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
